--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "twbs/bootstrap": "v4.0.0-alpha.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
