--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "twbs/bootstrap": "v4.0.0-alpha.2"
+        "twbs/bootstrap": "v4.0.0-alpha.2",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,6 +20,9 @@
     "autoload": {
         "classmap": [
             "database"
+        ],
+        "files": [
+            "app/helpers.php"
         ],
         "psr-4": {
             "App\\": "app/"
